# mtg_draft_ai

./: .gitignore  build.sh  build_arena_packs.py  download_17lands_card_data.sh  download_17lands_draft_data.py  download_17lands_draft_data.sh  env.yaml  extract_pack_data_from_draft_data_17lands.py  extract_pack_data_from_draft_data_17lands.sh  fit_MKM.py  forge_draft_stats.py  pyproject.toml  pyrightconfig.json  replay_dtypes.py  sample_forge_packs.py  seventeenlands_datasets.py  solve_arena_abundances_v4.py  split_csv_gz.py  split_csv_gz.sh
draft/: mc.py  typing.py  utils.py
draft/analysis/: gmm.py  kmeans.py  model.py  probability.py  set_solver.py  utils.py
draft/booster/: bag.py  basic.py  booster.py  gen.py  iid.py  sheet.py
draft/datasets/: ops.py  pack_data.py  seventeenlands.py
draft/forge/: utils.py
draft/forge_bridge/: bridge.py
draft/mc/: iid.py
draft/vis/: gmm.py  kmeans.py
forge-helper/: pom.xml
forge-helper/src/main/java/com/krafczyk/forge/: ForgeGuiDesktopHelper.java  PackFns.java
