[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draft"
version = "0.1.0"
description = "A collection of useful function for detecting sampling parameters and analyzing draft data."
authors = [
    { name = "Matthew Krafczyk", email = "krafczyk.matthew@gmail.com" },
]
#readme = "README.md"
#readme-content-type = "text/markdown"
license = { text = "MIT License" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/krafczyk/mtg_draft_ai" }

[project.optional-dependencies]
default = [
    "pandas",
    "sympy",
    "scipy",
    "jpype1",
    "matplotlib",
    "tqdm",
    "dask==2025.1.0",
    "jax[cuda12]",
    "optax"
]
